--- a/src/html/blocks/header.html
+++ b/src/html/blocks/header.html
@@ -2,18 +2,18 @@
     <div class="container">
         <nav class="nav">
             <a href="#" class="logo">
-                <img src="../img/icons/logo.svg" alt="logo">
+                <img src="./img/icons/logo.svg" alt="logo">
             </a>
             <ul class="nav_list">
-                <li><a href="" class="active">Home</a></li>
-                <li><a href="">About</a></li>
-                <li><a href="">Packages</a></li>
-                <li><a href="">FAQ</a></li>
-                <li><a href="">Community</a></li>
+                <li><a href="#!" class="active">Home</a></li>
+                <li><a href="#!">About</a></li>
+                <li><a href="#!">Packages</a></li>
+                <li><a href="#!">FAQ</a></li>
+                <li><a href="#!">Community</a></li>
             </ul>
             <div class="nav_btns">
-                <a href="#" class="btn-login">Login</a>
-                <a href="#" class="btn-signup">Signup</a>
+                <a href="#!" class="btn-login">Login</a>
+                <a href="#!" class="btn-signup">Signup</a>
             </div>
         </nav>
 
