--- a/src/html/index.html
+++ b/src/html/index.html
@@ -12,6 +12,9 @@
 
 <body>
 	@@include('blocks/header.html')
+	<main>
+		@@include('blocks/discover.html')
+	</main>
 	@@include('blocks/footer.html')
 	<script src="./js/index.bundle.js"></script>
 
