layout discover > form

--- a/src/html/blocks/discover.html
+++ b/src/html/blocks/discover.html
@@ -3,7 +3,7 @@
         <div class="discover__grid">
             <div class="discover__desc">
                 <div class="discover__title">
-                    <h1 class="title-1">
+                    <h1 class="title-1 title-1--decor">
                         Discover your favorite place with us
                     </h1>
                 </div>
@@ -17,13 +17,13 @@
                 </div>
 
                 <div class="discover__form">
-                    <form action="">Form</form>
+                    @@include('elements/form.html')
                 </div>
             </div>
 
 
             <div class="discover__picture">
-                <img src="./img/discover/hero_img.png" alt="" class="discover__picture-img">
+                <img src="./img/discover/hero-img.png" alt="" class="discover__picture-img">
             </div>
         </div>
     </div>
