--- a/src/html/blocks/discover.html
+++ b/src/html/blocks/discover.html
@@ -10,7 +10,8 @@
                 <div class="discover__text">
                     <div class="text">
                         <p>
-                            Your journey begins here with our curated travel experiences. Discover new horizons, create lasting memories, and explore the world with our expertly crafted itineraries.
+                            Your journey begins here with our curated travel experiences. Discover new horizons, create
+                            lasting memories, and explore the world with our expertly crafted itineraries.
 
                         </p>
                     </div>
