hint dicover layout

--- a/src/html/blocks/discover.html
+++ b/src/html/blocks/discover.html
@@ -24,6 +24,10 @@
 
 
             <div class="discover__picture">
+                <div class="discover__picture-hint">
+                    @@include('elements/hint-discover.html')
+                </div>
+
                 <img src="./img/discover/hero-img.png" alt="" class="discover__picture-img">
             </div>
         </div>
