--- a/src/html/blocks/discover.html
+++ b/src/html/blocks/discover.html
@@ -28,6 +28,10 @@
                     @@include('elements/hint-discover.html')
                 </div>
 
+                <div class="discover__picture-scroll">
+                    @@include('elements/scroll-down.html')
+                </div>
+
                 <img src="./img/discover/hero-img.png" alt="" class="discover__picture-img">
             </div>
         </div>
