--- a/src/html/index.html
+++ b/src/html/index.html
@@ -14,6 +14,7 @@
 	@@include('blocks/header.html')
 	<main>
 		@@include('blocks/discover.html')
+		@@include('blocks/partners.html')
 	</main>
 	@@include('blocks/footer.html')
 	<script src="./js/index.bundle.js"></script>
