start of section popular

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -15,6 +15,7 @@
 	<main>
 		@@include('blocks/discover.html')
 		@@include('blocks/partners.html')
+		@@include('blocks/popular.html')
 	</main>
 	@@include('blocks/footer.html')
 	<script src="./js/index.bundle.js"></script>
