--- a/src/html/blocks/popular.html
+++ b/src/html/blocks/popular.html
@@ -1,5 +1,29 @@
 <section class="popular">
     <div class="container">
-        
+        <div class="popular__top">
+
+            <div class="popular__title">
+                <h2 class="title-3">Popular Destinations</h2>
+                <p class="text">See our popular destinations that our client choose</p>
+            </div>
+
+            <div class="popular__control">
+                <button><img src="./img/icons/Button-left.svg" alt="Prev"></button>
+                <button><img src="./img/icons/Button-right.svg" alt="Next"></button>
+            </div>
+
+
+        </div>
+        <!-- popular__top end -->
+    </div>
+
+    <div class="container-right">
+        <div class="popular__slider">
+            <div class="card">
+                <div class="card__img">
+                    <img src="" alt="">
+                </div>
+            </div>
+        </div>
     </div>
 </section>
