--- a/src/html/index.html
+++ b/src/html/index.html
@@ -16,6 +16,7 @@
 		@@include('blocks/discover.html')
 		@@include('blocks/partners.html')
 		@@include('blocks/popular.html')
+		@@include('blocks/testimonials.html')
 	</main>
 	@@include('blocks/footer.html')
 	<script src="./js/index.bundle.js"></script>
