--- a/src/html/index.html
+++ b/src/html/index.html
@@ -17,6 +17,7 @@
 		@@include('blocks/partners.html')
 		@@include('blocks/popular.html')
 		@@include('blocks/testimonials.html')
+		@@include('blocks/subscribe.html')
 	</main>
 	@@include('blocks/footer.html')
 	<script src="./js/index.bundle.js"></script>
