fix testimonials via @@include, add .json

--- a/src/html/blocks/testimonials.html
+++ b/src/html/blocks/testimonials.html
@@ -1,21 +1,10 @@
 <section class="testimonials">
     <div class="container">
         <div class="testimonials__grid">
-            <div class="testimonials__col">
-                @@include('./testimonials/card.html')
-                @@include('./testimonials/card.html')
-                @@include('./testimonials/card.html')
-            </div>
-            <div class="testimonials__col">
-                @@include('./testimonials/card.html')
-                @@include('./testimonials/card.html')
-                @@include('./testimonials/card.html')
-            </div>
-            <div class="testimonials__col">
-                @@include('./testimonials/card.html')
-                @@include('./testimonials/card.html')
-                @@include('./testimonials/card.html')
-            </div>
+
+
+
+            @@loop('./templates/card__review.html',"./data/testimonials.json")
         </div>
     </div>
 </section>
