fix swiper popular

--- a/src/html/blocks/popular.html
+++ b/src/html/blocks/popular.html
@@ -19,7 +19,7 @@
 
     <div class="container-right">
         <div class="popular__slider">
-            @@include('./elements/swiper.html')
+            @@include('./elements/swepir-popular.html')
         </div>
     </div>
 </section>
