add & fix swiper-popular

--- a/src/html/blocks/elements/swiper-popular.html
+++ b/src/html/blocks/elements/swiper-popular.html
@@ -1,6 +1,8 @@
 <div class="swiper" id="swiper-popular">
     <div class="swiper-wrapper">
         <!-- Slides -->
-        @@loop('./../templates/popular-slider.html' , '.data/popular-slider.json')
+        
+        @@loop("./../templates/popular-slider.html", './data/popular-slider.json')
+
     </div>
 </div>
