--- a/src/html/blocks/discover.html
+++ b/src/html/blocks/discover.html
@@ -32,7 +32,7 @@
                     @@include('elements/scroll-down.html')
                 </div>
 
-                <img src="./img/discover/hero-img.png" alt="" class="discover__picture-img">
+                <img src="./img/discover/hero-img.png" alt="Hero" class="discover__picture-img">
             </div>
         </div>
     </div>
