--- a/src/html/blocks/elements/form.html
+++ b/src/html/blocks/elements/form.html
@@ -4,11 +4,11 @@
         <input id="autoCompleteContry" type="text" class="form__input" placeholder="e.g Bali, Indonesia" autocomplete="off">
     </label>
     <div class="form__devider"></div>
-    <label class="form__label">
+    <label class="form__label form__label--calendar ">
         <span>Date and time</span>
         <input id="datePicket" type="text" class="form__input" placeholder="MM/DD/YYYY" autocomplete="off">
     </label>
     <div class="form__btn">
-        <img src="./img/discover/search-btn.svg" alt="Search">
+        <img src="./img/discover/search.svg" alt="Search">
     </div>
 </form>
