add burger menu

--- a/src/html/blocks/header.html
+++ b/src/html/blocks/header.html
@@ -1,7 +1,7 @@
 <header class="header">
     <div class="container">
         <nav class="nav">
-            <a href="#" class="logo">
+            <a href="#" class="nav__logo logo">
                 <img src="./img/icons/logo.svg" alt="logo">
             </a>
             <ul class="nav_list">
@@ -15,7 +15,14 @@
                 <a href="#!" class="btn-login">Login</a>
                 <a href="#!" class="btn-signup">Signup</a>
             </div>
+            
+            <div class="nav__icon">
+                <button class="mobile-nav-btn">
+                    <div class="nav-icon"></div>
+                </button>
+            </div>
         </nav>
+
 
     </div>
 </header>
