--- a/src/html/blocks/discover.html
+++ b/src/html/blocks/discover.html
@@ -4,7 +4,7 @@
             <div class="discover__desc">
                 <div class="discover__title">
                     <h1 class="title-1 title-1--decor">
-                        Discover your favorite place with us
+                        Discover your favorite place with&nbsp;us
                     </h1>
                 </div>
                 <div class="discover__text">
