--- a/src/html/blocks/subscribe.html
+++ b/src/html/blocks/subscribe.html
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="subscribe__row">
             <div class="subscribe__desc">
-                <h3 class="subscribe__title">Join our newsletter to stay up to date</h3>
+                <h3 class="subscribe__title">Join our newsletter to stay up&nbsp;to&nbsp;date</h3>
                 <p class="subscribe__text">Stay connected with our brand</p>
             </div>
 
