--- a/src/html/blocks/testimonials.html
+++ b/src/html/blocks/testimonials.html
@@ -1,7 +1,16 @@
 <section class="testimonials">
     <div class="container">
+        <!-- Horizontal slider -->
+        <div class="testimonials-horizontal">
+            <div class="swiper " id="testimonials-horizontal-swiper">
+                <div class="swiper-wrapper smooth-transition">
+                    @@loop('./templates/card__review.html',"./data/testimonials-all.json")
+                </div>
+            </div>
+        </div>
+        <!-- !Horizontal slider -->
+        <!-- 3 Vertical sliders -->
         <div class="testimonials__grid">
-
             <div class="testimonials__col">
                 <!-- Swipe -->
                 <div class="swiper testimonials__swiper" id="testimonials-col-1">
@@ -30,5 +39,6 @@
 
             </div>
         </div>
+        <!--! 3 Vertical sliders -->
     </div>
 </section>
